--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="DoesItRingYourBell" />
     <meta property="og:description" content="DoesItRingYourBell" />
-    <meta property="og:site_name" content="RingRing.github.io" />
+    <meta property="og:site_name" content="DoesItRingYourBell.github.io" />
     <meta property="og:image" content="logo_ring.png" />
 
     <!-- Eigenes CSS -->
