--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </p>
         </div>
         <div class="bild">
-	    <img src="collage_ring.png" />
+			<img class="demo-bild" src="collage_ring.png" />
         </div>
         <div class="footer">
             <p><a href="https://codingdavinci.de/events/rheinmain/" target="_blank">Coding da Vinci Rhein-Main 2018</a></p>
